# cuprox

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INSTALL.md  LICENSE  README.md  RESEARCH.md  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
archive/: original_idea.txt
benchmarks/: benchmark_lp.py  benchmark_qp.py
examples/: 01_pytorch_differentiable_optimization.ipynb  02_portfolio_optimization.ipynb  03_model_predictive_control.ipynb  04_stochastic_programming.ipynb  05_multiperiod_portfolio_optimization.ipynb  06_learn_to_race.ipynb
python/: README.md  pyproject.toml  setup.py
python/cuprox/: __init__.py  exceptions.py  model.py  result.py  solver.py
python/cuprox/finance/: __init__.py  frontier.py  portfolio.py  risk.py  utils.py
python/cuprox/mpc/: __init__.py  constraints.py  controller.py  dynamics.py  trajectory.py
python/cuprox/stochastic/: __init__.py  distributions.py  evaluation.py  problem.py  saa.py  scenarios.py
python/cuprox/torch/: __init__.py  functions.py  layers.py  utils.py
python/cuprox/utils/: __init__.py  validation.py
src/bindings/: CMakeLists.txt  module.cpp
src/cuprox/: CMakeLists.txt
src/cuprox/core/: cuda_context.cuh  dense_vector.cu  dense_vector.cuh  error.hpp  memory.cuh  sparse_matrix.cuh  types.hpp
src/cuprox/linalg/: projections.cu  projections.cuh
src/cuprox/preprocess/: scaling.cu  scaling.cuh
src/cuprox/solvers/: admm.cu  admm.cuh  batch_pdhg.cu  batch_pdhg.cuh  pdhg.cu  pdhg.cuh
tests/cpp/: CMakeLists.txt  test_admm.cpp  test_dense_vector.cpp  test_pdhg.cpp  test_scaling.cpp  test_sparse_matrix.cpp
tests/python/: conftest.py  test_accuracy.py  test_finance_integration.py  test_finance_portfolio.py  test_finance_risk.py  test_import.py  test_model.py  test_mpc_controller.py  test_mpc_dynamics.py  test_mpc_integration.py  test_solver_lp.py  test_solver_qp.py  test_stochastic_integration.py  test_stochastic_problem.py  test_stochastic_saa.py  test_torch.py  test_torch_autograd.py  test_torch_integration.py  test_torch_qp.py
