# ============================================================================
# cuProx - GPU-Accelerated First-Order LP/QP Solver (Python Package)
# ============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuprox"
version = "0.1.0"
description = "GPU-accelerated LP/QP optimization solver using first-order proximal methods"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "cuProx Contributors", email = "cuprox@example.com"}
]
keywords = [
    "optimization",
    "linear-programming",
    "quadratic-programming",
    "gpu",
    "cuda",
    "machine-learning",
    "operations-research",
    "convex-optimization",
    "portfolio-optimization",
    "model-predictive-control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
finance = ["pandas>=2.0"]
full = ["torch>=2.0", "pandas>=2.0", "matplotlib>=3.5"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Aminsed/cuprox"
Documentation = "https://github.com/Aminsed/cuprox#readme"
Repository = "https://github.com/Aminsed/cuprox"
Issues = "https://github.com/Aminsed/cuprox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuprox*"]

[tool.setuptools.package-data]
cuprox = ["py.typed"]
